--- a/src/styles/helpers/_variables.scss
+++ b/src/styles/helpers/_variables.scss
@@ -49,7 +49,7 @@ $media-md: 767px;
 $media-lg: 1022px;
 $media-xl: 1279px;
 
-$media-sm--min: 576x;
+$media-sm--min: 576px;
 $media-md--min: 768px;
 $media-lg--min: 1023px;
 $media-xl--min: 1280px;
