--- a/src/styles/pages/information-systems.scss
+++ b/src/styles/pages/information-systems.scss
@@ -22,6 +22,8 @@
         color: $text-silver;
         @media(max-width: $media-sm) {
             margin-top: 20px;
+            font-size: rem(16);
+            line-height: 1.25;
         }
     }
 
