--- a/src/blocks/modules/profile-active-modal/profile-active-modal.scss
+++ b/src/blocks/modules/profile-active-modal/profile-active-modal.scss
@@ -1,5 +1,9 @@
 .active-modal {
     overflow: auto;
+    @media(max-width: $media-sm) {
+        width: 100%;
+        padding-right: 0 !important;
+    }
 
     &.show {
         .modal-dialog {
@@ -13,9 +17,23 @@
             max-width: $media-lg;
             margin: 16px auto;
             background-color: transparent;
+            @media(max-width: $media-sm) {
+                width: 100%;
+                margin: 0;
+            }
 
             .modal-gallery__controls {
                 margin-bottom: 24px;
+                @media(max-width: $media-sm) {
+                    position: fixed;
+                    z-index: 2;
+                    top: 0;
+                    right: 0;
+                    width: auto;
+                    margin: 0;
+                    padding: 16px;
+                    background-color: transparent;
+                }
             }
         }
 
@@ -25,6 +43,12 @@
             padding: 32px 0;
             background: $white;
             border-radius: 8px;
+            @media(max-width: $media-sm) {
+                width: 100%;
+                min-height: 100vh;
+                border-radius: 0;
+                padding: 64px 0 80px;
+            }
 
             .controls {
                 width: 100%;
@@ -33,10 +57,17 @@
                 &-content {
                     width: 100%;
                     background: $white;
+                    padding: 0 16px;
+                    @media(max-width: $media-sm) {
+                        position: static !important;
+                    }
+
 
                     &.scroll {
-                        border-bottom: 1px solid $border-10;
-                        z-index: 10;
+                        @media(min-width: $media-sm--min) {
+                            border-bottom: 1px solid $border-10;
+                            z-index: 10;
+                        }
                     }
                 }
 
@@ -49,6 +80,9 @@
                     height: 72px;
                     margin: 0 auto;
                     background: $white;
+                    @media(max-width: $media-sm) {
+                        justify-content: center;
+                    }
                 }
 
                 &-form {
@@ -98,6 +132,37 @@
                     background-color: transparent;
                     padding: 0;
 
+                    @media(max-width: $media-sm) {
+                        @include transition();
+                        justify-content: center;
+                        position: fixed;
+                        z-index: 1;
+                        bottom: 16px;
+                        left: 50%;
+                        width: 100%;
+                        max-width: 240px;
+                        text-align: center;
+                        border: none;
+                        padding: rem(16);
+                        border-radius: 5px;
+                        font-size: rem(16);
+                        line-height: 1.25;
+                        font-weight: 700;
+                        color: $white;
+                        background-color: $ctrl-black;
+                        transform: translateX(-50%);
+                        &:hover, &:focus {
+                            background-color: $text-black;
+                            box-shadow: none;
+                            color: $white;
+                            text-decoration: none;
+                        }
+
+                        &:active {
+                            transform: translateX(-50%) scale(.96);
+                        }
+                    }
+
                     &::before {
                         content: '';
                         width: 24px;
@@ -108,6 +173,9 @@
                         background-repeat: no-repeat;
                         background-position: center center;
                         margin-right: 8px;
+                        @media(max-width: $media-sm) {
+                            background-image: url(../img/icons/controls-me--white.svg);
+                        }
                     }
                 }
             }
@@ -119,6 +187,20 @@
             font-size: 2rem;
             line-height: 1.25;
             text-align: center;
+            padding: 0 16px;
+            @media(max-width: $media-sm) {
+                display: block;
+                position: fixed;
+                z-index: 1;
+                top: 0;
+                left: 0;
+                width: 100%;
+                font-size: 1rem;
+                text-align: left;
+                padding: 20px 16px 24px;
+                background: $white;
+                border-bottom: 1px solid rgba(0, 0, 0, .1);
+            }
         }
     }
 
@@ -129,9 +211,39 @@
         margin: 0 auto;
         font-size: 1rem;
         line-height: 1.25;
+        padding: 0 16px;
+
+        &-head {
+            @media(max-width: $media-sm) {
+                display: none;
+            }
+
+            &--modal {
+                display: none;
+                @media(max-width: $media-sm) {
+                    display: flex;
+                }
+            }
+        }
+
+        tbody {
+            display: flex;
+            flex-direction: column;
+        }
 
         tr {
             display: flex;
+            &.active-modal__table-head {
+                display: none;
+                &--mobile {
+                    display: flex;
+                    th {
+                        width: 50%;
+                        padding-left: 0;
+                        padding-right: 0;
+                    }
+                }
+            }
         }
 
         th, td {
@@ -147,14 +259,25 @@
             &:nth-child(1) {
                 width: 432px;
                 text-align: left;
+                @media(max-width: $media-sm) {
+                    width: calc(100% - 100px);
+                }
             }
 
             &:nth-child(2) {
                 width: 104px;
+                @media(max-width: $media-sm) {
+                    width: 52px;
+                    padding-right: 0;
+                }
             }
 
             &:nth-child(3) {
                 width: 80px;
+                @media(max-width: $media-sm) {
+                    width: 48px;
+                    padding-left: 16px;
+                }
             }
         }
 
@@ -184,6 +307,9 @@
                 background-repeat: no-repeat;
                 background-position: center center;
                 transform: translateY(-50%);
+                @media (max-width: $media-md) {
+                    display: none;
+                }
             }
 
             td {
