--- a/src/blocks/modules/regards-modal/regards-modal.scss
+++ b/src/blocks/modules/regards-modal/regards-modal.scss
@@ -1,5 +1,9 @@
 .regards-modal {
     overflow: auto;
+    @media(max-width: $media-sm) {
+        width: 100%;
+        padding-right: 0 !important;
+    }
 
     &.show {
         .modal-dialog {
@@ -13,18 +17,38 @@
             max-width: $media-lg;
             margin: 16px auto;
             background-color: transparent;
+            @media(max-width: $media-sm) {
+                width: 100%;
+                margin: 0;
+            }
 
             .modal-gallery__controls {
                 margin-bottom: 24px;
+                @media(max-width: $media-sm) {
+                    position: absolute;
+                    z-index: 1;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    margin: 0;
+                    padding: 16px;
+                }
             }
         }
 
         &-content {
             max-width: 616px;
             margin: 0 auto;
+            border: none;
             padding: 32px 0 64px;
             background: $white;
             border-radius: 8px;
+            @media(max-width: $media-sm) {
+                width: 100%;
+                min-height: 100vh;
+                border-radius: 0;
+                padding: 64px 32px 32px;
+            }
         }
 
         &-title {
@@ -33,6 +57,10 @@
             font-size: 2rem;
             line-height: 1.25;
             text-align: center;
+            @media(max-width: $media-sm) {
+                font-size: 1.75rem;
+                line-height: 1.29;
+            }
 
             .count {
                 color: $text-silver;
@@ -47,12 +75,16 @@
         margin: 32px auto 0;
         list-style: none;
         padding: 0;
+        @media(max-width: $media-sm) {
+            margin-top: 28px;
+        }
     }
 
     &__item {
         display: flex;
         align-items: flex-start;
         margin-top: 24px;
+
         &:first-child {
             margin-top: 0;
         }
