--- a/src/templates/pages/results-people.html
+++ b/src/templates/pages/results-people.html
@@ -81,8 +81,8 @@
                             <a href="#0" class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
-                                        <source srcset="/img/avatar.webp" type="image/webp">
-                                        <img src="/img/avatar.jpg" alt="Имя сотрудника">
+                                        <source srcset="img/avatar.webp" type="image/webp">
+                                        <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
                             </a>
@@ -114,8 +114,8 @@
                             <a href="#0" class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
-                                        <source srcset="/img/avatar.webp" type="image/webp">
-                                        <img src="/img/avatar.jpg" alt="Имя сотрудника">
+                                        <source srcset="img/avatar.webp" type="image/webp">
+                                        <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
                             </a>
@@ -147,8 +147,8 @@
                             <a href="#0" class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
-                                        <source srcset="/img/avatar.webp" type="image/webp">
-                                        <img src="/img/avatar.jpg" alt="Имя сотрудника">
+                                        <source srcset="img/avatar.webp" type="image/webp">
+                                        <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
                             </a>
