--- a/src/templates/pages/results.html
+++ b/src/templates/pages/results.html
@@ -175,8 +175,8 @@
                             <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
-                                        <source srcset="/img/avatar.webp" type="image/webp">
-                                        <img src="/img/avatar.jpg" alt="Имя сотрудника">
+                                        <source srcset="img/avatar.webp" type="image/webp">
+                                        <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
                             </div>
@@ -208,8 +208,8 @@
                             <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
-                                        <source srcset="/img/avatar.webp" type="image/webp">
-                                        <img src="/img/avatar.jpg" alt="Имя сотрудника">
+                                        <source srcset="img/avatar.webp" type="image/webp">
+                                        <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
                             </div>
@@ -241,8 +241,8 @@
                             <div class="employee-photo">
                                 <div class="employee-photo__inner">
                                     <picture>
-                                        <source srcset="/img/avatar.webp" type="image/webp">
-                                        <img src="/img/avatar.jpg" alt="Имя сотрудника">
+                                        <source srcset="img/avatar.webp" type="image/webp">
+                                        <img src="img/avatar.jpg" alt="Имя сотрудника">
                                     </picture>
                                 </div>
                             </div>
